fix cart-icon z-index

--- a/css/CartIcon.css
+++ b/css/CartIcon.css
@@ -8,6 +8,7 @@
   text-decoration: none;
   cursor: pointer;
   transition: all 0.5s ease;
+  z-index: 1000;
 }
 
 .cart-icon.shake {
